Bug 1685334 - Part 1: Partitioning the view-source: pages. r=pbz

This patch make the view-source to be partiitoned. This will make the
view-source to access the right cache.

Differential Revision: https://phabricator.services.mozilla.com/D121728