toolkit/components/antitracking/StoragePrincipalHelper.cpp
@@ -12,7 +12,6 @@
 #include "mozilla/StorageAccess.h"
 #include "nsContentUtils.h"
 #include "nsIEffectiveTLDService.h"
-#include "nsNetUtil.h"
 
 namespace mozilla {
 
@@ -49,13 +48,6 @@ bool ChooseOriginAttributes(nsIChannel* aChannel, OriginAttributes& aAttrs,
     }
   }
 
-  // We don't want to partition view-source: pages
-  nsCOMPtr<nsIURI> channelURI;
-  nsresult rv = NS_GetFinalChannelURI(aChannel, getter_AddRefs(channelURI));
-  if (NS_SUCCEEDED(rv) && net::SchemeIsViewSource(channelURI)) {
-    return false;
-  }
-
   nsAutoString partitionKey;
   Unused << cjs->GetPartitionKey(partitionKey);
 
@@ -75,7 +67,7 @@ bool ChooseOriginAttributes(nsIChannel* aChannel, OriginAttributes& aAttrs,
   auto* basePrin = BasePrincipal::Cast(toplevelPrincipal);
   nsCOMPtr<nsIURI> principalURI;
 
-  rv = basePrin->GetURI(getter_AddRefs(principalURI));
+  nsresult rv = basePrin->GetURI(getter_AddRefs(principalURI));
   if (NS_WARN_IF(NS_FAILED(rv))) {
     return false;
   }
